# rzepabot

./: .gitignore  .gitmodules  pendulum  pyproject.toml  run.sh  update.sh  update_game_data.py
rzepabot/: __main__.py  bot.py  command.py  config.py  exceptions.py  pendulum_locale.py  persistence.py  presence.py  stalks.py
rzepabot/data/: __init__.py  bugs.py  fish.py  get_villagers.py  villagers.py
rzepabot/plugins/: __init__.py  dodokod.py  info.py  profile.py
